[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ARGI-BERRI", email = "me@endroit.net" }]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10.0",
    "loguru>=0.7.3",
    "uvloop>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
